parser/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> program
Rule 1     program -> function_definition_list DEFINE NUM MAIN OPEN_PARENTHESIS CLOSE_PARENTHESIS block YIELD NUM_LITERAL SEMICOLON
Rule 2     function_definition_list -> function_definition function_definition_list
Rule 3     function_definition_list -> empty
Rule 4     function_definition -> DEFINE function_type IDENTIFIER OPEN_PARENTHESIS parameter_list CLOSE_PARENTHESIS block
Rule 5     function_type -> NUM
Rule 6     function_type -> STR
Rule 7     function_type -> FLAG
Rule 8     function_type -> VOID
Rule 9     parameter_list -> parameter ELEMENT_SEPERATOR parameter_list
Rule 10    parameter_list -> parameter
Rule 11    parameter_list -> empty
Rule 12    parameter -> data_type IDENTIFIER
Rule 13    block -> OPEN_BRACES statement_list CLOSE_BRACES
Rule 14    statement_list -> statement SEMICOLON statement_list
Rule 15    statement_list -> statement SEMICOLON
Rule 16    statement_list -> empty
Rule 17    statement -> variable_declaration
Rule 18    statement -> assignment_statement
Rule 19    statement -> block
Rule 20    statement -> show_statement
Rule 21    statement -> conditional_statement
Rule 22    statement -> loop_statement
Rule 23    statement -> return_statement
Rule 24    statement -> try_catch_statement
Rule 25    statement -> function_call
Rule 26    statement -> enter_statement
Rule 27    variable_declaration -> data_type IDENTIFIER ASSIGNMENT_OPERATOR expression
Rule 28    assignment_statement -> IDENTIFIER ASSIGNMENT_OPERATOR expression
Rule 29    show_statement -> SHOW OPEN_PARENTHESIS expression expression_list CLOSE_PARENTHESIS
Rule 30    expression_list -> ELEMENT_SEPERATOR expression expression_list
Rule 31    expression_list -> empty
Rule 32    conditional_statement -> GIVEN OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block
Rule 33    conditional_statement -> GIVEN OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block OTHERWISE block
Rule 34    conditional_statement -> GIVEN OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block OTHER OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block
Rule 35    conditional_statement -> GIVEN OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block OTHERWISE block OTHER OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block
Rule 36    loop_statement -> ITER OPEN_PARENTHESIS expression SLICING_COLON expression SLICING_COLON expression CLOSE_PARENTHESIS block
Rule 37    loop_statement -> WHILE OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block
Rule 38    loop_statement -> REPEAT block WHILE OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
Rule 39    return_statement -> YIELD expression
Rule 40    try_catch_statement -> TEST block POP STRING_LITERAL ARREST OPEN_PARENTHESIS STRING_LITERAL CLOSE_PARENTHESIS block
Rule 41    function_call -> IDENTIFIER OPEN_PARENTHESIS argument_list CLOSE_PARENTHESIS
Rule 42    argument_list -> expression ELEMENT_SEPERATOR argument_list
Rule 43    argument_list -> expression
Rule 44    argument_list -> empty
Rule 45    enter_statement -> data_type IDENTIFIER ASSIGNMENT_OPERATOR ENTER OPEN_PARENTHESIS STRING_LITERAL CLOSE_PARENTHESIS
Rule 46    expression -> term
Rule 47    expression -> term BINARY_OPERATOR expression
Rule 48    expression -> term COMPARISON_OPERATOR term
Rule 49    term -> factor
Rule 50    term -> factor BINARY_OPERATOR term
Rule 51    term -> factor COMPARISON_OPERATOR factor
Rule 52    factor -> IDENTIFIER
Rule 53    factor -> NUM_LITERAL
Rule 54    factor -> STRING_LITERAL
Rule 55    factor -> BOOLEAN
Rule 56    factor -> OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
Rule 57    factor -> UNARY_OPERATOR expression
Rule 58    identifier -> IDENTIFIER
Rule 59    number -> NUM_LITERAL
Rule 60    string -> STRING_LITERAL
Rule 61    boolean -> FLAG
Rule 62    data_type -> NUM
Rule 63    data_type -> STR
Rule 64    data_type -> FLAG
Rule 65    data_type -> LIST
Rule 66    data_type -> TUP
Rule 67    data_type -> VOID
Rule 68    empty -> <empty>

Terminals, with rules where they appear

ARREST               : 40
ASSIGNMENT_OPERATOR  : 27 28 45
BINARY_OPERATOR      : 47 50
BOOLEAN              : 55
CLOSE_BRACES         : 13
CLOSE_PARENTHESIS    : 1 4 29 32 33 34 34 35 35 36 37 38 40 41 45 56
COMPARISON_OPERATOR  : 48 51
DEFINE               : 1 4
ELEMENT_SEPERATOR    : 9 30 42
ENTER                : 45
FLAG                 : 7 61 64
GIVEN                : 32 33 34 35
IDENTIFIER           : 4 12 27 28 41 45 52 58
ITER                 : 36
LIST                 : 65
MAIN                 : 1
NUM                  : 1 5 62
NUM_LITERAL          : 1 53 59
OPEN_BRACES          : 13
OPEN_PARENTHESIS     : 1 4 29 32 33 34 34 35 35 36 37 38 40 41 45 56
OTHER                : 34 35
OTHERWISE            : 33 35
POP                  : 40
REPEAT               : 38
SEMICOLON            : 1 14 15
SHOW                 : 29
SLICING_COLON        : 36 36
STR                  : 6 63
STRING_LITERAL       : 40 40 45 54 60
TEST                 : 40
TUP                  : 66
UNARY_OPERATOR       : 57
VOID                 : 8 67
WHILE                : 37 38
YIELD                : 1 39
error                : 

Nonterminals, with rules where they appear

argument_list        : 41 42
assignment_statement : 18
block                : 1 4 19 32 33 33 34 34 35 35 35 36 37 38 40 40
boolean              : 
conditional_statement : 21
data_type            : 12 27 45
empty                : 3 11 16 31 44
enter_statement      : 26
expression           : 27 28 29 30 32 33 34 34 35 35 36 36 36 37 38 39 42 43 47 56 57
expression_list      : 29 30
factor               : 49 50 51 51
function_call        : 25
function_definition  : 2
function_definition_list : 1 2
function_type        : 4
identifier           : 
loop_statement       : 22
number               : 
parameter            : 9 10
parameter_list       : 4 9
program              : 0
return_statement     : 23
show_statement       : 20
statement            : 14 15
statement_list       : 13 14
string               : 
term                 : 46 47 48 48 50
try_catch_statement  : 24
variable_declaration : 17

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . function_definition_list DEFINE NUM MAIN OPEN_PARENTHESIS CLOSE_PARENTHESIS block YIELD NUM_LITERAL SEMICOLON
    (2) function_definition_list -> . function_definition function_definition_list
    (3) function_definition_list -> . empty
    (4) function_definition -> . DEFINE function_type IDENTIFIER OPEN_PARENTHESIS parameter_list CLOSE_PARENTHESIS block
    (68) empty -> .

  ! shift/reduce conflict for DEFINE resolved as shift
    DEFINE          shift and go to state 3

  ! DEFINE          [ reduce using rule 68 (empty -> .) ]

    program                        shift and go to state 1
    function_definition_list       shift and go to state 2
    function_definition            shift and go to state 4
    empty                          shift and go to state 5

state 1

    (0) S' -> program .



state 2

    (1) program -> function_definition_list . DEFINE NUM MAIN OPEN_PARENTHESIS CLOSE_PARENTHESIS block YIELD NUM_LITERAL SEMICOLON

    DEFINE          shift and go to state 6


state 3

    (4) function_definition -> DEFINE . function_type IDENTIFIER OPEN_PARENTHESIS parameter_list CLOSE_PARENTHESIS block
    (5) function_type -> . NUM
    (6) function_type -> . STR
    (7) function_type -> . FLAG
    (8) function_type -> . VOID

    NUM             shift and go to state 8
    STR             shift and go to state 9
    FLAG            shift and go to state 10
    VOID            shift and go to state 11

    function_type                  shift and go to state 7

state 4

    (2) function_definition_list -> function_definition . function_definition_list
    (2) function_definition_list -> . function_definition function_definition_list
    (3) function_definition_list -> . empty
    (4) function_definition -> . DEFINE function_type IDENTIFIER OPEN_PARENTHESIS parameter_list CLOSE_PARENTHESIS block
    (68) empty -> .

  ! shift/reduce conflict for DEFINE resolved as shift
    DEFINE          shift and go to state 3

  ! DEFINE          [ reduce using rule 68 (empty -> .) ]

    function_definition            shift and go to state 4
    function_definition_list       shift and go to state 12
    empty                          shift and go to state 5

state 5

    (3) function_definition_list -> empty .

    DEFINE          reduce using rule 3 (function_definition_list -> empty .)


state 6

    (1) program -> function_definition_list DEFINE . NUM MAIN OPEN_PARENTHESIS CLOSE_PARENTHESIS block YIELD NUM_LITERAL SEMICOLON

    NUM             shift and go to state 13


state 7

    (4) function_definition -> DEFINE function_type . IDENTIFIER OPEN_PARENTHESIS parameter_list CLOSE_PARENTHESIS block

    IDENTIFIER      shift and go to state 14


state 8

    (5) function_type -> NUM .

    IDENTIFIER      reduce using rule 5 (function_type -> NUM .)


state 9

    (6) function_type -> STR .

    IDENTIFIER      reduce using rule 6 (function_type -> STR .)


state 10

    (7) function_type -> FLAG .

    IDENTIFIER      reduce using rule 7 (function_type -> FLAG .)


state 11

    (8) function_type -> VOID .

    IDENTIFIER      reduce using rule 8 (function_type -> VOID .)


state 12

    (2) function_definition_list -> function_definition function_definition_list .

    DEFINE          reduce using rule 2 (function_definition_list -> function_definition function_definition_list .)


state 13

    (1) program -> function_definition_list DEFINE NUM . MAIN OPEN_PARENTHESIS CLOSE_PARENTHESIS block YIELD NUM_LITERAL SEMICOLON

    MAIN            shift and go to state 15


state 14

    (4) function_definition -> DEFINE function_type IDENTIFIER . OPEN_PARENTHESIS parameter_list CLOSE_PARENTHESIS block

    OPEN_PARENTHESIS shift and go to state 16


state 15

    (1) program -> function_definition_list DEFINE NUM MAIN . OPEN_PARENTHESIS CLOSE_PARENTHESIS block YIELD NUM_LITERAL SEMICOLON

    OPEN_PARENTHESIS shift and go to state 17


state 16

    (4) function_definition -> DEFINE function_type IDENTIFIER OPEN_PARENTHESIS . parameter_list CLOSE_PARENTHESIS block
    (9) parameter_list -> . parameter ELEMENT_SEPERATOR parameter_list
    (10) parameter_list -> . parameter
    (11) parameter_list -> . empty
    (12) parameter -> . data_type IDENTIFIER
    (68) empty -> .
    (62) data_type -> . NUM
    (63) data_type -> . STR
    (64) data_type -> . FLAG
    (65) data_type -> . LIST
    (66) data_type -> . TUP
    (67) data_type -> . VOID

    CLOSE_PARENTHESIS reduce using rule 68 (empty -> .)
    NUM             shift and go to state 22
    STR             shift and go to state 23
    FLAG            shift and go to state 24
    LIST            shift and go to state 25
    TUP             shift and go to state 26
    VOID            shift and go to state 27

    parameter_list                 shift and go to state 18
    parameter                      shift and go to state 19
    empty                          shift and go to state 20
    data_type                      shift and go to state 21

state 17

    (1) program -> function_definition_list DEFINE NUM MAIN OPEN_PARENTHESIS . CLOSE_PARENTHESIS block YIELD NUM_LITERAL SEMICOLON

    CLOSE_PARENTHESIS shift and go to state 28


state 18

    (4) function_definition -> DEFINE function_type IDENTIFIER OPEN_PARENTHESIS parameter_list . CLOSE_PARENTHESIS block

    CLOSE_PARENTHESIS shift and go to state 29


state 19

    (9) parameter_list -> parameter . ELEMENT_SEPERATOR parameter_list
    (10) parameter_list -> parameter .

    ELEMENT_SEPERATOR shift and go to state 30
    CLOSE_PARENTHESIS reduce using rule 10 (parameter_list -> parameter .)


state 20

    (11) parameter_list -> empty .

    CLOSE_PARENTHESIS reduce using rule 11 (parameter_list -> empty .)


state 21

    (12) parameter -> data_type . IDENTIFIER

    IDENTIFIER      shift and go to state 31


state 22

    (62) data_type -> NUM .

    IDENTIFIER      reduce using rule 62 (data_type -> NUM .)


state 23

    (63) data_type -> STR .

    IDENTIFIER      reduce using rule 63 (data_type -> STR .)


state 24

    (64) data_type -> FLAG .

    IDENTIFIER      reduce using rule 64 (data_type -> FLAG .)


state 25

    (65) data_type -> LIST .

    IDENTIFIER      reduce using rule 65 (data_type -> LIST .)


state 26

    (66) data_type -> TUP .

    IDENTIFIER      reduce using rule 66 (data_type -> TUP .)


state 27

    (67) data_type -> VOID .

    IDENTIFIER      reduce using rule 67 (data_type -> VOID .)


state 28

    (1) program -> function_definition_list DEFINE NUM MAIN OPEN_PARENTHESIS CLOSE_PARENTHESIS . block YIELD NUM_LITERAL SEMICOLON
    (13) block -> . OPEN_BRACES statement_list CLOSE_BRACES

    OPEN_BRACES     shift and go to state 33

    block                          shift and go to state 32

state 29

    (4) function_definition -> DEFINE function_type IDENTIFIER OPEN_PARENTHESIS parameter_list CLOSE_PARENTHESIS . block
    (13) block -> . OPEN_BRACES statement_list CLOSE_BRACES

    OPEN_BRACES     shift and go to state 33

    block                          shift and go to state 34

state 30

    (9) parameter_list -> parameter ELEMENT_SEPERATOR . parameter_list
    (9) parameter_list -> . parameter ELEMENT_SEPERATOR parameter_list
    (10) parameter_list -> . parameter
    (11) parameter_list -> . empty
    (12) parameter -> . data_type IDENTIFIER
    (68) empty -> .
    (62) data_type -> . NUM
    (63) data_type -> . STR
    (64) data_type -> . FLAG
    (65) data_type -> . LIST
    (66) data_type -> . TUP
    (67) data_type -> . VOID

    CLOSE_PARENTHESIS reduce using rule 68 (empty -> .)
    NUM             shift and go to state 22
    STR             shift and go to state 23
    FLAG            shift and go to state 24
    LIST            shift and go to state 25
    TUP             shift and go to state 26
    VOID            shift and go to state 27

    parameter                      shift and go to state 19
    parameter_list                 shift and go to state 35
    empty                          shift and go to state 20
    data_type                      shift and go to state 21

state 31

    (12) parameter -> data_type IDENTIFIER .

    ELEMENT_SEPERATOR reduce using rule 12 (parameter -> data_type IDENTIFIER .)
    CLOSE_PARENTHESIS reduce using rule 12 (parameter -> data_type IDENTIFIER .)


state 32

    (1) program -> function_definition_list DEFINE NUM MAIN OPEN_PARENTHESIS CLOSE_PARENTHESIS block . YIELD NUM_LITERAL SEMICOLON

    YIELD           shift and go to state 36


state 33

    (13) block -> OPEN_BRACES . statement_list CLOSE_BRACES
    (14) statement_list -> . statement SEMICOLON statement_list
    (15) statement_list -> . statement SEMICOLON
    (16) statement_list -> . empty
    (17) statement -> . variable_declaration
    (18) statement -> . assignment_statement
    (19) statement -> . block
    (20) statement -> . show_statement
    (21) statement -> . conditional_statement
    (22) statement -> . loop_statement
    (23) statement -> . return_statement
    (24) statement -> . try_catch_statement
    (25) statement -> . function_call
    (26) statement -> . enter_statement
    (68) empty -> .
    (27) variable_declaration -> . data_type IDENTIFIER ASSIGNMENT_OPERATOR expression
    (28) assignment_statement -> . IDENTIFIER ASSIGNMENT_OPERATOR expression
    (13) block -> . OPEN_BRACES statement_list CLOSE_BRACES
    (29) show_statement -> . SHOW OPEN_PARENTHESIS expression expression_list CLOSE_PARENTHESIS
    (32) conditional_statement -> . GIVEN OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block
    (33) conditional_statement -> . GIVEN OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block OTHERWISE block
    (34) conditional_statement -> . GIVEN OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block OTHER OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block
    (35) conditional_statement -> . GIVEN OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block OTHERWISE block OTHER OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block
    (36) loop_statement -> . ITER OPEN_PARENTHESIS expression SLICING_COLON expression SLICING_COLON expression CLOSE_PARENTHESIS block
    (37) loop_statement -> . WHILE OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block
    (38) loop_statement -> . REPEAT block WHILE OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (39) return_statement -> . YIELD expression
    (40) try_catch_statement -> . TEST block POP STRING_LITERAL ARREST OPEN_PARENTHESIS STRING_LITERAL CLOSE_PARENTHESIS block
    (41) function_call -> . IDENTIFIER OPEN_PARENTHESIS argument_list CLOSE_PARENTHESIS
    (45) enter_statement -> . data_type IDENTIFIER ASSIGNMENT_OPERATOR ENTER OPEN_PARENTHESIS STRING_LITERAL CLOSE_PARENTHESIS
    (62) data_type -> . NUM
    (63) data_type -> . STR
    (64) data_type -> . FLAG
    (65) data_type -> . LIST
    (66) data_type -> . TUP
    (67) data_type -> . VOID

    CLOSE_BRACES    reduce using rule 68 (empty -> .)
    IDENTIFIER      shift and go to state 51
    OPEN_BRACES     shift and go to state 33
    SHOW            shift and go to state 52
    GIVEN           shift and go to state 53
    ITER            shift and go to state 54
    WHILE           shift and go to state 55
    REPEAT          shift and go to state 56
    YIELD           shift and go to state 57
    TEST            shift and go to state 58
    NUM             shift and go to state 22
    STR             shift and go to state 23
    FLAG            shift and go to state 24
    LIST            shift and go to state 25
    TUP             shift and go to state 26
    VOID            shift and go to state 27

    statement_list                 shift and go to state 37
    statement                      shift and go to state 38
    empty                          shift and go to state 39
    variable_declaration           shift and go to state 40
    assignment_statement           shift and go to state 41
    block                          shift and go to state 42
    show_statement                 shift and go to state 43
    conditional_statement          shift and go to state 44
    loop_statement                 shift and go to state 45
    return_statement               shift and go to state 46
    try_catch_statement            shift and go to state 47
    function_call                  shift and go to state 48
    enter_statement                shift and go to state 49
    data_type                      shift and go to state 50

state 34

    (4) function_definition -> DEFINE function_type IDENTIFIER OPEN_PARENTHESIS parameter_list CLOSE_PARENTHESIS block .

    DEFINE          reduce using rule 4 (function_definition -> DEFINE function_type IDENTIFIER OPEN_PARENTHESIS parameter_list CLOSE_PARENTHESIS block .)


state 35

    (9) parameter_list -> parameter ELEMENT_SEPERATOR parameter_list .

    CLOSE_PARENTHESIS reduce using rule 9 (parameter_list -> parameter ELEMENT_SEPERATOR parameter_list .)


state 36

    (1) program -> function_definition_list DEFINE NUM MAIN OPEN_PARENTHESIS CLOSE_PARENTHESIS block YIELD . NUM_LITERAL SEMICOLON

    NUM_LITERAL     shift and go to state 59


state 37

    (13) block -> OPEN_BRACES statement_list . CLOSE_BRACES

    CLOSE_BRACES    shift and go to state 60


state 38

    (14) statement_list -> statement . SEMICOLON statement_list
    (15) statement_list -> statement . SEMICOLON

    SEMICOLON       shift and go to state 61


state 39

    (16) statement_list -> empty .

    CLOSE_BRACES    reduce using rule 16 (statement_list -> empty .)


state 40

    (17) statement -> variable_declaration .

    SEMICOLON       reduce using rule 17 (statement -> variable_declaration .)


state 41

    (18) statement -> assignment_statement .

    SEMICOLON       reduce using rule 18 (statement -> assignment_statement .)


state 42

    (19) statement -> block .

    SEMICOLON       reduce using rule 19 (statement -> block .)


state 43

    (20) statement -> show_statement .

    SEMICOLON       reduce using rule 20 (statement -> show_statement .)


state 44

    (21) statement -> conditional_statement .

    SEMICOLON       reduce using rule 21 (statement -> conditional_statement .)


state 45

    (22) statement -> loop_statement .

    SEMICOLON       reduce using rule 22 (statement -> loop_statement .)


state 46

    (23) statement -> return_statement .

    SEMICOLON       reduce using rule 23 (statement -> return_statement .)


state 47

    (24) statement -> try_catch_statement .

    SEMICOLON       reduce using rule 24 (statement -> try_catch_statement .)


state 48

    (25) statement -> function_call .

    SEMICOLON       reduce using rule 25 (statement -> function_call .)


state 49

    (26) statement -> enter_statement .

    SEMICOLON       reduce using rule 26 (statement -> enter_statement .)


state 50

    (27) variable_declaration -> data_type . IDENTIFIER ASSIGNMENT_OPERATOR expression
    (45) enter_statement -> data_type . IDENTIFIER ASSIGNMENT_OPERATOR ENTER OPEN_PARENTHESIS STRING_LITERAL CLOSE_PARENTHESIS

    IDENTIFIER      shift and go to state 62


state 51

    (28) assignment_statement -> IDENTIFIER . ASSIGNMENT_OPERATOR expression
    (41) function_call -> IDENTIFIER . OPEN_PARENTHESIS argument_list CLOSE_PARENTHESIS

    ASSIGNMENT_OPERATOR shift and go to state 63
    OPEN_PARENTHESIS shift and go to state 64


state 52

    (29) show_statement -> SHOW . OPEN_PARENTHESIS expression expression_list CLOSE_PARENTHESIS

    OPEN_PARENTHESIS shift and go to state 65


state 53

    (32) conditional_statement -> GIVEN . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block
    (33) conditional_statement -> GIVEN . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block OTHERWISE block
    (34) conditional_statement -> GIVEN . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block OTHER OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block
    (35) conditional_statement -> GIVEN . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block OTHERWISE block OTHER OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block

    OPEN_PARENTHESIS shift and go to state 66


state 54

    (36) loop_statement -> ITER . OPEN_PARENTHESIS expression SLICING_COLON expression SLICING_COLON expression CLOSE_PARENTHESIS block

    OPEN_PARENTHESIS shift and go to state 67


state 55

    (37) loop_statement -> WHILE . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS block

    OPEN_PARENTHESIS shift and go to state 68


state 56

    (38) loop_statement -> REPEAT . block WHILE OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (13) block -> . OPEN_BRACES statement_list CLOSE_BRACES

    OPEN_BRACES     shift and go to state 33

    block                          shift and go to state 69

state 57

    (39) return_statement -> YIELD . expression
    (46) expression -> . term
    (47) expression -> . term BINARY_OPERATOR expression
    (48) expression -> . term COMPARISON_OPERATOR term
    (49) term -> . factor
    (50) term -> . factor BINARY_OPERATOR term
    (51) term -> . factor COMPARISON_OPERATOR factor
    (52) factor -> . IDENTIFIER
    (53) factor -> . NUM_LITERAL
    (54) factor -> . STRING_LITERAL
    (55) factor -> . BOOLEAN
    (56) factor -> . OPEN_PARENTHESIS expression CLOSE_PARENTHESIS
    (57) factor -> . UNARY_OPERATOR expression
